[package]
name = "timer_list"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "A list of timed events that will be triggered sequentially when the timer expires"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/timer_list"
documentation = "https://arceos-org.github.io/timer_list"

[dependencies]
